Bug 391925 - Schedule option "Do nothing" is confusing
Summary: Schedule option "Do nothing" is confusing
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-16 11:42 UTC by Alan Prescott
Modified: 2019-08-29 00:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2,5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Prescott 2018-03-16 11:42:47 UTC
The option of "Do nothing" in response to 'If this schedule occurs on a non-processing day' is confusing.
I don't know whether this means - process the transaction anyway or literally do nothing (i.e. don't process the transaction at all).
Comment 1 Ralf Habacker 2018-05-10 06:38:46 UTC
According to 

"kmymoney/mymoney/mymoneyschedule.h:423:    * - MoveNothing: don't modify date"

this option specifies not move the transaction date and process it anyway
Comment 2 Ralf Habacker 2018-05-10 06:44:00 UTC
Git commit 7dd4bbfeb2ecbcde3bdcb2bf8e125d1abfb6fbb5 by Ralf Habacker.
Committed on 10/05/2018 at 06:43.
Pushed by habacker into branch '4.8'.

Fix 'Schedule option "Do nothing" is confusing'
FIXED-IN:4.8.2

M  +1    -1    kmymoney/dialogs/keditscheduledlgdecl.ui
M  +1    -1    kmymoney/mymoney/mymoneyschedule.cpp

https://commits.kde.org/kmymoney/7dd4bbfeb2ecbcde3bdcb2bf8e125d1abfb6fbb5
Comment 3 Thomas Baumgart 2018-05-11 13:22:55 UTC
Git commit 51ae6493947b62eb3a31570f76193233bc71e93f by Thomas Baumgart.
Committed on 11/05/2018 at 13:22.
Pushed by tbaumgart into branch 'master'.

Fix 'Schedule option "Do nothing" is confusing'

M  +1    -1    kmymoney/dialogs/keditscheduledlg.ui
M  +1    -1    kmymoney/mymoney/mymoneyschedule.cpp

https://commits.kde.org/kmymoney/51ae6493947b62eb3a31570f76193233bc71e93f