Fix 'Schedule option "Do nothing" is confusing'

BUG:391925
FIXED-IN:4.8.2